Update recent changes

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 <body data-theme="dark">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -51,7 +51,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     </div>
 
                     <!-- Right Side: Overlapping Image -->
-                    <div class="col-lg-6 contact-right-side d-none d-lg-flex">
+                    <div class="col-lg-6 contact-right-side d-flex order-lg-2 order-last">
                         <div class="contact-image-box">
                             <div class="contact-image-glow"></div>
                             <img src="assets/img/contact-studio.png" alt="Premium Studio Gear">
