--- a/dashboard.html
+++ b/dashboard.html
@@ -47,8 +47,11 @@
                 <div class="d-flex align-items-center gap-3">
                     <button class="btn btn-icon text-muted d-lg-none" id="sidebar-toggle"><i
                             class="bi bi-list fs-2"></i></button>
-                    <div class="rounded-circle bg-primary bg-opacity-20 d-flex align-items-center justify-content-center text-primary fw-bold"
-                        style="width: 45px; height: 45px;">TV</div>
+                    <div class="profile-img-wrap">
+                        <img src="assets/images/artist-profile.png" alt="Artist Profile"
+                            class="rounded-circle border border-primary border-opacity-20"
+                            style="width: 45px; height: 45px; object-fit: cover;">
+                    </div>
                 </div>
             </header>
 
