--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
 <body data-theme="dark">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -51,7 +51,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -235,8 +235,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 reveal-up" style="transition-delay: 0.2s;">
-                    <div
-                        class="p-5 rounded-4 border border-light border-opacity-10 bg-white bg-opacity-5 backdrop-blur">
+                    <div class="glass-card h-100">
                         <h4 class="text-white mb-4">Need a Custom Quote?</h4>
                         <p class="text-white-50 mb-4">For larger projects, label-backed productions, or multi-week
                             residency, we offer bespoke rates.</p>
