--- a/register.html
+++ b/register.html
@@ -72,6 +72,26 @@
                                 <button type="submit" class="btn btn-primary-studio btn-premium w-100">Register
                                     Account</button>
                             </div>
+
+                            <div class="col-12 mb-3">
+                                <div class="auth-divider">
+                                    <span class="auth-divider-text">Or register with</span>
+                                </div>
+                            </div>
+
+                            <div class="col-12 mb-4">
+                                <div class="d-flex justify-content-center gap-3">
+                                    <a href="#" class="social-auth-btn" title="Google">
+                                        <i class="bi bi-google"></i>
+                                    </a>
+                                    <a href="#" class="social-auth-btn" title="Apple">
+                                        <i class="bi bi-apple"></i>
+                                    </a>
+                                    <a href="#" class="social-auth-btn" title="Facebook">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="col-12 text-center">
                                 <span class="text-muted small">Already registered?</span>
                                 <a href="login.html" class="text-primary small fw-bold text-decoration-none ms-1">Log
