--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 <body data-theme="dark">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -50,7 +50,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-sun-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -102,8 +102,8 @@
                 <h2 class="section-title mb-5">Mixing & <span class="text-gradient">Mastering</span></h2>
                 <div class="mb-5 glow-pulse">
                     <img src="https://t3.ftcdn.net/jpg/04/31/21/20/360_F_431212015_tIZUXv099VuHyNa3i2phiMFyVSsGPc78.jpg"
-                        alt="Mixing Console" class="img-fluid rounded-circle border border-primary border-opacity-20"
-                        style="max-width: 400px; height: 400px; object-fit: cover;">
+                        alt="Mixing Console"
+                        class="img-fluid rounded-circle border border-primary border-opacity-20 mixing-img-premium">
                 </div>
                 <p class="text-white-50 mx-auto" style="max-width: 700px;">
                     Translating frequency into feeling. Our hybrid analog-digital workflow provides the warmth of tape
