--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 <body data-theme="dark">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -51,7 +51,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -150,8 +150,8 @@
                 <div class="col-lg-4 col-md-6 reveal-up" style="transition-delay: 0.1s;">
                     <div class="blog-card-3d">
                         <div class="blog-card-img">
-                            <img src="https://images.unsplash.com/photo-1514525253361-bee8718a300c?auto=format&fit=crop&q=80&w=800"
-                                alt="Studio Gear">
+                            <img src="https://dm0qx8t0i9gc9.cloudfront.net/thumbnails/video/3LFTQJc/videoblocks-young-woman-sending-voice-message-using-her-smartphone-young-woman-sends-an-audio-message-via-her-smartphone-shes-recording-her-speech_rnn7slq-b_thumbnail-1080_03.png"
+                                alt="Vocal Recording">
                         </div>
                         <div class="p-4">
                             <span class="text-primary small fw-bold text-uppercase">Production</span>
@@ -215,8 +215,7 @@
                     </div>
                 </div>
                 <div class="artist-story-card">
-                    <img src="https://images.unsplash.com/photo-1559671902-3bdecacddf7f?auto=format&fit=crop&q=80&w=800"
-                        alt="Artist Story 3">
+                    <img src="assets/img/eminem-studio.png" alt="Eminem in Studio">
                     <div class="position-absolute bottom-0 start-0 p-4 w-100 bg-gradient-dark">
                         <h4 class="text-white mb-2">The Producers Cut</h4>
                         <p class="text-white-50 small mb-0">A unique perspective on collaborative creation in a
