--- a/home-2.html
+++ b/home-2.html
@@ -19,7 +19,7 @@
 <body data-theme="dark">
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top scrolled">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -51,7 +51,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
 
                 <div class="col-lg-6 order-1 order-lg-2">
                     <div class="hero-content text-lg-start text-center reveal-right">
-                        <span class="text-primary ls-2 text-uppercase mb-3 d-block small fw-bold">Live Your
+                        <span class="text-primary ls-2 text-uppercase mb-3 mt-3 d-block small fw-bold">Live Your
                             Rhythm</span>
                         <h1 class="hero-title-music mb-4">Dance with the <br>Rhythm, Immersed in <br><span
                                 class="text-gradient">the Sound</span></h1>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-lg-4 reveal-up" style="transition-delay: 0.2s;">
                     <div class="equipment-card">
-                        <img src="https://media.ldlc.com/r1600/ld/products/00/06/21/85/LD0006218587.jpg"
+                        <img src="https://images.unsplash.com/photo-1593453918093-8f308edb9e45?auto=format&fit=crop&q=80&w=600"
                             alt="Studio Monitor" class="equipment-img-floating">
                         <h4 class="text-white mb-3">Precision Monitors</h4>
                         <p class="text-muted small">Hearing every detail with absolute spectral honesty.</p>
