--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <!-- Content Column (Left) -->
                 <div class="col-lg-6 hero-left-side">
                     <div class="hero-content reveal-left pt-lg-5">
-                        <div class="d-flex align-items-center gap-3 mb-4">
+                        <div class="d-flex align-items-center justify-content-center gap-3 mb-4">
                             <span
                                 class="badge rounded-0 bg-primary bg-opacity-10 text-primary border border-primary border-opacity-20 px-3 py-2 text-uppercase ls-2 fw-bold small">
                                 Global Standard
@@ -91,7 +91,7 @@
                             environment where your creative ideas float freely, captured with absolute analog warmth and
                             cinematic precision.
                         </p>
-                        <div class="hero-cta d-flex gap-4">
+                        <div class="hero-cta d-flex gap-4 justify-content-center">
                             <a href="contact.html" class="btn btn-premium btn-primary-studio">Book a Session</a>
                             <a href="about.html" class="btn btn-premium btn-outline-studio">Explore Studio</a>
                         </div>
@@ -119,9 +119,9 @@
         <div class="container container-custom">
             <div class="row align-items-center g-5">
                 <div class="col-lg-7">
-                    <div class="reveal-up">
+                    <div class="reveal-up mb-4 d-flex justify-content-center">
                         <span
-                            class="badge rounded-0 bg-primary bg-opacity-10 text-primary border border-primary border-opacity-20 px-3 py-2 text-uppercase ls-2 fw-bold small mb-4 d-inline-block">The
+                            class="badge rounded-0 bg-primary bg-opacity-10 text-primary border border-primary border-opacity-20 px-3 py-2 text-uppercase ls-2 fw-bold small">The
                             Vision</span>
                     </div>
                     <h2 class="display-4 fw-bold text-white mb-4 cinematic-font reveal-up"
@@ -130,7 +130,7 @@
                     <p class="text-white-50 fs-5 mb-5 reveal-up" style="transition-delay: 0.2s;">At SonicForge, we
                         believe that recording is a craft where precision meets emotion. Our unique diagonal approach to
                         acoustics ensures perfect phase coherence for your instruments.</p>
-                    <div class="reveal-up" style="transition-delay: 0.3s;">
+                    <div class="reveal-up d-flex justify-content-center" style="transition-delay: 0.3s;">
                         <a href="services.html" class="btn btn-premium btn-primary-studio">Our Methodology</a>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                 <div class="arsenal-item arsenal-item-3 reveal-up" style="transition-delay: 0.3s;">
                     <div class="arsenal-scanner" style="animation-delay: -2s;"></div>
                     <div class="arsenal-img-wrap">
-                        <img src="https://images.unsplash.com/photo-1520529986991-34c2e0a7a401?auto=format&fit=crop&q=80&w=1200"
+                        <img src="https://images.unsplash.com/photo-1593453918093-8f308edb9e45?auto=format&fit=crop&q=80&w=1200"
                             class="arsenal-img" alt="Studio Monitors">
                     </div>
                     <div class="arsenal-overlay">
@@ -238,7 +238,7 @@
                 <div class="arsenal-item arsenal-item-4 reveal-up" style="transition-delay: 0.4s;">
                     <div class="arsenal-scanner" style="animation-delay: -3s;"></div>
                     <div class="arsenal-img-wrap">
-                        <img src="https://images.unsplash.com/photo-1590602847861-f357a9332bbc?auto=format&fit=crop&q=80&w=1200"
+                        <img src="https://images.unsplash.com/photo-1557431177-36141475c676?auto=format&fit=crop&q=80&w=1200"
                             class="arsenal-img" alt="Rack Gear">
                     </div>
                     <div class="arsenal-overlay">
@@ -258,7 +258,7 @@
                 <div class="col-lg-5 reveal-up">
                     <div class="video-container-premium">
                         <div class="video-overlay-vignette"></div>
-                        <img src="https://img.freepik.com/free-photo/lifestyle-couple-date-night_23-2149131762.jpg?semt=ais_hybrid&w=740&q=80"
+                        <img src="https://images.unsplash.com/photo-1516280440614-37939bbacd81?auto=format&fit=crop&q=80&w=1200"
                             class="cinematic-img-zoom" alt="Cinematic Studio Atmosphere">
                     </div>
                 </div>
