--- a/login.html
+++ b/login.html
@@ -54,7 +54,23 @@
                             </div>
                             <a href="#" class="small text-primary text-decoration-none">Forgot password?</a>
                         </div>
-                        <button type="submit" class="btn btn-primary-studio btn-premium w-100 mb-3">Sign In</button>
+                        <button type="submit" class="btn btn-primary-studio btn-premium w-100 mb-4">Sign In</button>
+
+                        <div class="auth-divider mb-4">
+                            <span class="auth-divider-text">Or continue with</span>
+                        </div>
+
+                        <div class="d-flex justify-content-center gap-3 mb-4">
+                            <a href="#" class="social-auth-btn" title="Google">
+                                <i class="bi bi-google"></i>
+                            </a>
+                            <a href="#" class="social-auth-btn" title="Apple">
+                                <i class="bi bi-apple"></i>
+                            </a>
+                            <a href="#" class="social-auth-btn" title="Facebook">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                        </div>
 
                         <div class="text-center">
                             <span class="text-muted small">New artist?</span>
