--- a/service-details.html
+++ b/service-details.html
@@ -51,7 +51,7 @@
                         <div id="theme-toggle" class="theme-toggle me-2">
                             <i class="bi bi-moon-fill"></i>
                         </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-outline-studio">Login</a>
+                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
                         <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                     </div>
                 </div>
