--- a/home-2.html
+++ b/home-2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SonicForge Studio | The Art of Sound</title>
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <!-- Google Fonts: Playfair Display & Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,42 +19,35 @@
 
 <body data-theme="dark">
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <!-- Navbar (Anti-Gravity Header) -->
+    <nav class="navbar navbar-expand-lg fixed-top anti-gravity-nav">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
                 <span class="brand-text">SonicForge</span>
             </a>
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar">
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <i class="bi bi-list"></i>
             </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                style="background: var(--bg-card); color: var(--text-main);">
-                <div class="offcanvas-header border-bottom border-light border-opacity-10">
-                    <h5 class="offcanvas-title cinematic-font">Menu</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="home-2.html">Home 2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                        <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-                    </ul>
-
-                    <div class="d-flex align-items-center gap-2">
-                        <div id="theme-toggle" class="theme-toggle me-2">
-                            <i class="bi bi-moon-fill"></i>
-                        </div>
-                        <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
-                        <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="home-2.html">Home 2</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+                <div class="d-flex align-items-center gap-2 menu-actions">
+                    <div id="theme-toggle" class="theme-toggle me-2">
+                        <i class="bi bi-moon-fill"></i>
                     </div>
+                    <a href="login.html" class="btn btn-premium-sm btn-primary-studio">Login</a>
+                    <a href="register.html" class="btn btn-premium-sm btn-primary-studio">Sign Up</a>
                 </div>
             </div>
         </div>
@@ -121,21 +115,15 @@
                     </p>
                     <ul class="list-unstyled">
                         <li class="mb-4 d-flex align-items-center gap-3">
-                            <div class="p-2 rounded-circle bg-primary bg-opacity-10 text-primary">
-                                <i class="bi bi-mic-fill"></i>
-                            </div>
+                            <i class="bi bi-mic-fill text-primary fs-3"></i>
                             <span class="text-white fw-medium">Acoustically Tuned Live Rooms</span>
                         </li>
                         <li class="mb-4 d-flex align-items-center gap-3">
-                            <div class="p-2 rounded-circle bg-primary bg-opacity-10 text-primary">
-                                <i class="bi bi-gear-fill"></i>
-                            </div>
+                            <i class="bi bi-gear-fill text-primary fs-3"></i>
                             <span class="text-white fw-medium">Legendary Outboard Gear</span>
                         </li>
                         <li class="mb-4 d-flex align-items-center gap-3">
-                            <div class="p-2 rounded-circle bg-primary bg-opacity-10 text-primary">
-                                <i class="bi bi-cup-hot-fill"></i>
-                            </div>
+                            <i class="bi bi-cup-hot-fill text-primary fs-3"></i>
                             <span class="text-white fw-medium">Premium Artist Lounge</span>
                         </li>
                     </ul>
@@ -206,7 +194,7 @@
 
             <div class="row g-4">
                 <div class="col-lg-4 reveal-up">
-                    <div class="equipment-card">
+                    <div class="equipment-card text-center">
                         <img src="https://images.unsplash.com/photo-1558403194-611308249627?auto=format&fit=crop&q=80&w=600"
                             alt="Vintage Mic" class="equipment-img-floating">
                         <h4 class="text-white mb-3">Vintage Microphones</h4>
@@ -214,7 +202,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 reveal-up" style="transition-delay: 0.1s;">
-                    <div class="equipment-card">
+                    <div class="equipment-card text-center">
                         <img src="https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?auto=format&fit=crop&q=80&w=600"
                             alt="Analog Console" class="equipment-img-floating">
                         <h4 class="text-white mb-3">Analog Consoles</h4>
@@ -222,7 +210,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 reveal-up" style="transition-delay: 0.2s;">
-                    <div class="equipment-card">
+                    <div class="equipment-card text-center">
                         <img src="https://images.unsplash.com/photo-1593453918093-8f308edb9e45?auto=format&fit=crop&q=80&w=600"
                             alt="Studio Monitor" class="equipment-img-floating">
                         <h4 class="text-white mb-3">Precision Monitors</h4>
