--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Login - SonicForge Studio</title>
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <link
@@ -23,7 +24,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-5 col-lg-4">
+            <div class="col-md-6 col-lg-4">
                 <div class="text-center mb-4 reveal-up">
                     <a href="index.html" class="auth-brand brand-identity justify-content-center">
                         <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
@@ -46,7 +47,7 @@
                                 class="form-control bg-transparent border-light border-opacity-10 text-white py-2 shadow-none"
                                 placeholder="••••••••">
                         </div>
-                        <div class="d-flex justify-content-between align-items-center mb-4">
+                        <div class="d-flex justify-content-between align-items-center flex-wrap gap-2 mb-4">
                             <div class="form-check">
                                 <input class="form-check-input bg-transparent border-secondary" type="checkbox"
                                     id="remember">
