--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist Registration - SonicForge Studio</title>
+    <link rel="icon" type="image/png" href="assets/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <link
@@ -23,7 +24,7 @@
 
     <div class="container py-5">
         <div class="row justify-content-center">
-            <div class="col-md-5 col-lg-5">
+            <div class="col-md-6 col-lg-5">
                 <div class="text-center mb-4 reveal-up">
                     <a href="index.html" class="auth-brand brand-identity justify-content-center">
                         <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
