--- a/login.html
+++ b/login.html
@@ -24,15 +24,15 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6 col-lg-4">
-                <div class="text-center mb-4 reveal-up">
+            <div class="col-md-6 col-lg-3">
+                <div class="text-center reveal-up">
                     <a href="index.html" class="auth-brand brand-identity justify-content-center">
                         <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
                         <span class="brand-text">SonicForge</span>
                     </a>
                 </div>
 
-                <div class="studio-card p-4 p-md-5 reveal-up" style="transition-delay: 0.1s;">
+                <div class="studio-card p-3 p-md-4 reveal-up" style="transition-delay: 0.1s;">
                     <h3 class="mb-4 text-center">Welcome Back</h3>
                     <form action="dashboard.html">
                         <div class="mb-3">
