--- a/pricing.html
+++ b/pricing.html
@@ -20,7 +20,7 @@
 <body data-theme="dark">
 
     <!-- Navbar (Anti-Gravity Header) -->
-    <nav class="navbar navbar-expand-lg fixed-top anti-gravity-nav">
+    <nav class="navbar navbar-expand-xl fixed-top anti-gravity-nav">
         <div class="container container-custom">
             <a class="navbar-brand brand-identity" href="index.html">
                 <img src="assets/images/logo.png" alt="SonicForge Logo" class="brand-logo-img">
