Fix mobile navbar transparency, close icon visibility, and Home Page fixed position issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body data-theme="dark">
+<body data-theme="dark" class="home-body">
 
     <!-- Navbar (Anti-Gravity Header) -->
     <nav class="navbar navbar-expand-xl fixed-top anti-gravity-nav">
