Finalize responsive layout fixes, centering issues, and theme-aware color adjustments

--- a/pricing.html
+++ b/pricing.html
@@ -252,7 +252,7 @@
                 <div class="col-lg-10 reveal-up">
                     <h2 class="display-3 text-white mb-4 cinematic-font">An Investment in <br><span
                             class="text-gradient">Your Identity</span></h2>
-                    <p class="text-white-50 fs-5 mb-5 mx-auto" style="max-width: 800px;">
+                    <p class="fs-5 mb-5 mx-auto investment-subtext" style="max-width: 800px; font-weight: 600;">
                         Professional sound is not an expense; it is the currency of longevity. Secure your legacy in an
                         environment engineered for winners.
                     </p>
